--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "16.13.1",
-    "react-native": "0.63.2"
+    "react-native": "0.63.2",
+    "react-native-swipeout": "^2.3.6",
+    "realm": "^6.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
